test/should-fail/不合法的整数-5.warn
整数[2222222222222222222222222222222]超出了表示范围[-2147483648, 2147483647]。